2001-05-21  Michael Snyder  <msnyder@redhat.com>

	* remote.c (remote_async_wait): Added new variable fieldsize.
	Add fieldsize (return value of hex2bin) to string pointer p.

2001-05-20  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* m68hc11-tdep.c (m68hc11_pop_frame): Fix stack pointer computation.
	(m68hc11_analyze_instruction): Update the pc correctly.
	(m68hc11_guess_from_prologue): Take into account the stack correction
	for the saving address.

2001-05-07  Daniel Berlin  <dan@cgsoftware.com>

	Changes by Jim Ingham:
	
	* values.c (value_change_enclosing_type): New function.  If the
	new enclosing type is larger than the old one, we need to allocate
	more space.
	* value.h: Add value_change_enclosing_type prototype.
	* valops.c (value_cast): Use it.
	(value_assign): Use it.
	(value_addr): Use it.
	(value_ind): Use it.
	(value_full_object): Use it.
	
2001-05-07  Daniel Berlin  <dan@cgsoftware.com>

	* values.c (value_static_field): Handle static fields that have a
	constant value.

2001-05-17  Michael Snyder  <msnyder@redhat.com>

	* blockframe.c (create_new_frame): Zero all the fields via memset,
	rather than zeroing them one by one.

2001-05-17  Eli Zaretskii  <eliz@is.elta.co.il>

	* top.c (user_args): Remove unused declaration.

2001-05-16  Michael Snyder  <msnyder@redhat.com>

	* infcmd.c (do_registers_info): Move alloca outside of loop.

2001-05-15  John S Kallal  <jskallal@home.com>

	* remote.c (remote_wait): Added new variable fieldsize.
	Add fieldsize (return value of hex2bin) to string pointer p.

2001-05-15  Mark Kettenis  <kettenis@gnu.org>

	* sparc-tdep.c (sparc_gdbarch_init): Get the architecture from
	info.bfd_arch_info.

2001-05-14  Kevin Buettner  <kevinb@redhat.com>

	* lin-lwp.c (detach_callback, lin_lwp_wait, lin_lwp_pid_to_str):
	Adjust format strings for printing LWPs to account for the fact
	that the type returned by GET_LWP() is now a long instead of an
	int.

2001-05-14  Kevin Buettner  <kevinb@redhat.com>
